--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en js">
+<html lang="en">
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,29 +15,27 @@
 </head>
 <body class="demo-2">
 
-	<div class="header">
-		<div class="logo-wrapper">
-		  <div class="brand">
-			  <div class="logo">
-			    <svg width="200px" height="200px" >
-	          <path stroke="#39c283" stroke-width="0" fill="#39c283" d="M140.773,59.227C137.316,55.771,130.055,50,100,50
-	          s-37.317,5.771-40.774,9.227C55.77,62.684,49.999,69.104,50,100c-0.001,30.896,5.77,37.316,9.227,40.773
-	          C62.683,144.229,69.103,150,100,150c30.895,0,37.317-5.771,40.772-9.227C144.229,137.316,150,130.896,150,100
-	          S144.229,62.683,140.773,59.227z"/>
+	<div class="logo-wrapper">
+	  <div class="brand">
+		  <div class="logo">
+		    <svg width="200px" height="200px" >
+          <path stroke="#39c283" stroke-width="0" fill="#39c283" d="M140.773,59.227C137.316,55.771,130.055,50,100,50
+          s-37.317,5.771-40.774,9.227C55.77,62.684,49.999,69.104,50,100c-0.001,30.896,5.77,37.316,9.227,40.773
+          C62.683,144.229,69.103,150,100,150c30.895,0,37.317-5.771,40.772-9.227C144.229,137.316,150,130.896,150,100
+          S144.229,62.683,140.773,59.227z"/>
 
-	          <path stroke="#39c283" stroke-width="0" fill="#39c283" d="M140.773,59.227C137.316,55.771,130.055,50,100,50
-	          s-37.317,5.771-40.774,9.227C55.77,62.684,49.999,69.104,50,100c-0.001,30.896,5.77,37.316,9.227,40.773
-	          C62.683,144.229,69.103,150,100,150c30.895,0,37.317-5.771,40.772-9.227C144.229,137.316,150,130.896,150,100
-	          S144.229,62.683,140.773,59.227z"/>
+          <path stroke="#39c283" stroke-width="0" fill="#39c283" d="M140.773,59.227C137.316,55.771,130.055,50,100,50
+          s-37.317,5.771-40.774,9.227C55.77,62.684,49.999,69.104,50,100c-0.001,30.896,5.77,37.316,9.227,40.773
+          C62.683,144.229,69.103,150,100,150c30.895,0,37.317-5.771,40.772-9.227C144.229,137.316,150,130.896,150,100
+          S144.229,62.683,140.773,59.227z"/>
 
-	          <path stroke="#39c283" stroke-width="0" fill="#39c283" d="M140.773,59.227C137.316,55.771,130.055,50,100,50
-	          s-37.317,5.771-40.774,9.227C55.77,62.684,49.999,69.104,50,100c-0.001,30.896,5.77,37.316,9.227,40.773
-	          C62.683,144.229,69.103,150,100,150c30.895,0,37.317-5.771,40.772-9.227C144.229,137.316,150,130.896,150,100
-	          S144.229,62.683,140.773,59.227z"/>
-			    </svg>
-			  </div>
+          <path stroke="#39c283" stroke-width="0" fill="#39c283" d="M140.773,59.227C137.316,55.771,130.055,50,100,50
+          s-37.317,5.771-40.774,9.227C55.77,62.684,49.999,69.104,50,100c-0.001,30.896,5.77,37.316,9.227,40.773
+          C62.683,144.229,69.103,150,100,150c30.895,0,37.317-5.771,40.772-9.227C144.229,137.316,150,130.896,150,100
+          S144.229,62.683,140.773,59.227z"/>
+		    </svg>
 		  </div>
-		</div>
+	  </div>
 	</div>
 
 	<div class="grid grid--layout-2 grid--current">
@@ -55,17 +53,15 @@
 		<div class="grid__item" data-delay="250"></div>
 		<div class="grid__item"></div>
 		<div class="grid__item grid__item--nav grid__item--nav-prev">
-			<svg class="icon icon--nav-arrow"><use xlink:href="#icon-nav-arrow"></use></svg>
+			<div class="grid__link">CONTACT</div>
 		</div>
 		<div class="grid__item grid__item--nav grid__item--nav-next">
-			<svg class="icon icon--nav-arrow"><use xlink:href="#icon-nav-arrow"></use></svg>
+			<div class="grid__link">ARTICLES</div>
 		</div>
 		<h2 class="grid__item grid__item--name">OUR <br/>WORK</h2>
 		<h3 class="grid__item grid__item--title">BUCHEA</h3>
 		<p class="grid__item grid__item--text">Mobile first web experiences</p>
 	</div>
-
-	<script src="js/demo.js"></script>
 
 </body>
 </html>
