Add basic modal layout

--- a/index.html
+++ b/index.html
@@ -63,5 +63,35 @@
 		<p class="grid__item grid__item--text">Mobile first web experiences</p>
 	</div>
 
+	<div class="modal">
+		<div class="modal-exit">X</div>
+		<div class="modal-banner">
+			<div class="banner-title">Suhdude</div>
+		</div>
+		<div class="modal-content">
+			<strong>Hi there,</strong>
+
+			<p>
+				We make awesome shit and stufff burooasdfaosdfo.
+				Like our amazing thing with stuff.
+			</p>
+
+			<img src="http://lorempixel.com/400/200?fuck=off" />
+			<p>
+				We make awesome shit and stufff burooasdfaosdfo.
+				Like our amazing thing with stuff.
+			</p>
+
+			<img src="http://lorempixel.com/400/200" />
+			<p>
+				We make awesome shit and stufff burooasdfaosdfo.
+				Like our amazing thing with stuff.
+			</p>
+
+		</div>
+	</div>
+
+	<script src="main.js"></script>
+
 </body>
 </html>
