Add modal transitions

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="shortcut icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Kanit:700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
+	<link rel="stylesheet" type="text/css" href="css/animations.css" />
 	<link rel="stylesheet" type="text/css" href="css/demo.css" />
 	<link rel="stylesheet" type="text/css" href="css/logo.css" />
 </head>
@@ -64,34 +65,12 @@
 	</div>
 
 	<div class="modal">
-		<div class="modal-exit">X</div>
-		<div class="modal-banner">
-			<div class="banner-title">Suhdude</div>
-		</div>
-		<div class="modal-content">
-			<strong>Hi there,</strong>
-
-			<p>
-				We make awesome shit and stufff burooasdfaosdfo.
-				Like our amazing thing with stuff.
-			</p>
-
-			<img src="http://lorempixel.com/400/200?fuck=off" />
-			<p>
-				We make awesome shit and stufff burooasdfaosdfo.
-				Like our amazing thing with stuff.
-			</p>
-
-			<img src="http://lorempixel.com/400/200" />
-			<p>
-				We make awesome shit and stufff burooasdfaosdfo.
-				Like our amazing thing with stuff.
-			</p>
-
-		</div>
+		<div class="modal-exit-button">X</div>
+		<div class="modal-content"></div>
 	</div>
 
-	<script src="main.js"></script>
+	<script src="articles.js"></script>
+	<script src="app.js"></script>
 
 </body>
 </html>
