--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 		    </svg>
 		  </div>
 	  </div>
+
+		<div class="logo-subtext">Mobile first<br/>web experiences.</div>
 	</div>
 
 	<div class="grid grid--layout-2 grid--current">
@@ -61,7 +63,7 @@
 		</div>
 		<h2 class="grid__item grid__item--name">OUR <br/>WORK</h2>
 		<h3 class="grid__item grid__item--title">BUCHEA</h3>
-		<p class="grid__item grid__item--text">Mobile first web experiences</p>
+		<!-- <p class="grid__item grid__item--text">Mobile first web experiences</p> -->
 	</div>
 
 	<div class="modal">
