--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Kanit:700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/animations.css" />
-	<link rel="stylesheet" type="text/css" href="css/demo.css" />
+	<link rel="stylesheet" type="text/css" href="css/index.css" />
 	<link rel="stylesheet" type="text/css" href="css/logo.css" />
 </head>
-<body class="demo-2">
+<body class="container">
 
 	<div class="logo-wrapper">
 	  <div class="brand">
