Start adjusting grid items

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<div class="grid__item" data-delay="40"></div>
 		<div class="grid__item" data-direction="ltr" data-delay="70"></div>
 		<div class="grid__item" data-direction="btt" data-delay="100"></div>
-		<div class="grid__item" data-delay="200"></div>
+		<!-- <div class="grid__item" data-delay="200"></div> -->
 		<div class="grid__item"></div>
 		<div class="grid__item" data-direction="ttb"></div>
 		<div class="grid__item" data-direction="btt"></div>
