Finish updating grid for now

--- a/index.html
+++ b/index.html
@@ -38,22 +38,15 @@
 		  </div>
 	  </div>
 
-		<div class="logo-subtext">Mobile first<br/>web experiences.</div>
+		<!-- <div class="logo-subtext">Mobile first<br/>web experiences.</div> -->
 	</div>
 
 	<div class="grid grid--layout-2 grid--current">
-		<div class="grid__item" data-delay="50"></div>
-		<div class="grid__item" data-delay="200"></div>
-		<div class="grid__item" data-direction="ltr" data-delay="100"></div>
-		<div class="grid__item" data-delay="40"></div>
-		<div class="grid__item" data-direction="ltr" data-delay="70"></div>
-		<div class="grid__item" data-direction="btt" data-delay="100"></div>
-		<!-- <div class="grid__item" data-delay="200"></div> -->
 		<div class="grid__item"></div>
-		<div class="grid__item" data-direction="ttb"></div>
-		<div class="grid__item" data-direction="btt"></div>
-		<div class="grid__item" data-delay="100"></div>
-		<div class="grid__item" data-delay="250"></div>
+		<div class="grid__item"></div>
+		<div class="grid__item"></div>
+		<div class="grid__item"></div>
+		<div class="grid__item"></div>
 		<div class="grid__item"></div>
 		<div class="grid__item grid__item--nav grid__item--nav-prev">
 			<div class="grid__link">CONTACT</div>
@@ -62,7 +55,7 @@
 			<div class="grid__link">ARTICLES</div>
 		</div>
 		<h2 class="grid__item grid__item--name">OUR <br/>WORK</h2>
-		<h3 class="grid__item grid__item--title">BUCHEA</h3>
+		<!-- <h3 class="grid__item grid__item--title">BUCHEA</h3> -->
 		<!-- <p class="grid__item grid__item--text">Mobile first web experiences</p> -->
 	</div>
 
