--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		  </div>
 	  </div>
 
-		<!-- <div class="logo-subtext">Mobile first<br/>web experiences.</div> -->
+		<div class="logo-subtext">Mobile first<br/>web experiences.</div>
 	</div>
 
 	<div class="grid grid--layout-2 grid--current">
@@ -55,8 +55,8 @@
 			<div class="grid__link">ARTICLES</div>
 		</div>
 		<h2 class="grid__item grid__item--name">OUR <br/>WORK</h2>
-		<!-- <h3 class="grid__item grid__item--title">BUCHEA</h3> -->
-		<!-- <p class="grid__item grid__item--text">Mobile first web experiences</p> -->
+		<h3 class="grid__item grid__item--title">BUCHEA</h3>
+		<p class="grid__item grid__item--text">LETS CHAT</p>
 	</div>
 
 	<div class="modal">
