--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
 		<div class="logo-subtext">Mobile first<br/>web experiences.</div>
 	</div>
 
-	<div class="grid grid--layout-2 grid--current">
-		<div class="grid__item"></div>
-		<div class="grid__item"></div>
-		<div class="grid__item"></div>
-		<div class="grid__item"></div>
-		<div class="grid__item"></div>
-		<div class="grid__item"></div>
-		<div class="grid__item grid__item--nav grid__item--nav-prev">
+	<div class="grid">
+		<div class="grid-item"></div>
+		<div class="grid-item"></div>
+		<div class="grid-item"></div>
+		<div class="grid-item"></div>
+		<div class="grid-item"></div>
+		<div class="grid-item"></div>
+		<div class="grid-item grid-item--nav grid-item--nav-prev">
 			<div class="grid__link">CONTACT</div>
 		</div>
-		<div class="grid__item grid__item--nav grid__item--nav-next">
+		<div class="grid-item grid-item--nav grid-item--nav-next">
 			<div class="grid__link">ARTICLES</div>
 		</div>
-		<h2 class="grid__item grid__item--name">OUR <br/>WORK</h2>
-		<h3 class="grid__item grid__item--title">BUCHEA</h3>
-		<p class="grid__item grid__item--text">LETS CHAT</p>
+		<h2 class="grid-item grid-item--name">OUR <br/>WORK</h2>
+		<h3 class="grid-item grid-item--title">BUCHEA</h3>
+		<p class="grid-item grid-item--text">LETS CHAT</p>
 	</div>
 
 	<div class="modal">
