Fix script and test out custom background on grid-item

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 	</div>
 
 	<div class="grid">
-		<div class="grid-item grid-item--animateIn"></div>
-		<div class="grid-item grid-item--animateIn"></div>
-		<div class="grid-item grid-item--animateIn"></div>
-		<div class="grid-item grid-item--animateIn"></div>
-		<div class="grid-item grid-item--animateIn"></div>
-		<div class="grid-item grid-item--animateIn"></div>
+		<div class="grid-item grid-item-img grid-item--animateIn"></div>
+		<div class="grid-item grid-item-img grid-item--animateIn"></div>
+		<div class="grid-item grid-item-img grid-item--animateIn"></div>
+		<div class="grid-item grid-item-img grid-item--animateIn"></div>
+		<div class="grid-item grid-item-img grid-item--animateIn"></div>
+		<div class="grid-item grid-item-img grid-item--animateIn"></div>
 		<div class="grid-item grid-item--animateIn grid-item--nav grid-item--nav-prev">
 			<div class="grid__link">CONTACT</div>
 		</div>
