Add in different modal functionality

--- a/index.html
+++ b/index.html
@@ -42,21 +42,27 @@
 	</div>
 
 	<div class="grid">
-		<div class="grid-item grid-item-img grid-item--animateIn"></div>
-		<div class="grid-item grid-item-img grid-item--animateIn"></div>
-		<div class="grid-item grid-item-img grid-item--animateIn"></div>
-		<div class="grid-item grid-item-img grid-item--animateIn"></div>
-		<div class="grid-item grid-item-img grid-item--animateIn"></div>
-		<div class="grid-item grid-item-img grid-item--animateIn"></div>
-		<div class="grid-item grid-item--animateIn grid-item--nav grid-item--nav-prev">
+		<div data-article="one" class="grid-item grid-item-img grid-item--animateIn"></div>
+		<div data-article="two" class="grid-item grid-item-img grid-item--animateIn"></div>
+		<div data-article="one" class="grid-item grid-item-img grid-item--animateIn"></div>
+		<div data-article="one" class="grid-item grid-item-img grid-item--animateIn"></div>
+		<div data-article="one" class="grid-item grid-item-img grid-item--animateIn"></div>
+		<div data-article="one" class="grid-item grid-item-img grid-item--animateIn"></div>
+		<div data-article="one" class="grid-item grid-item--animateIn grid-item--nav grid-item--nav-prev">
 			<div class="grid__link">CONTACT</div>
 		</div>
-		<div class="grid-item grid-item--animateIn grid-item--nav grid-item--nav-next">
+		<div data-article="one" class="grid-item grid-item--animateIn grid-item--nav grid-item--nav-next">
 			<div class="grid__link">ARTICLES</div>
 		</div>
-		<h2 class="grid-item grid-item--animateIn grid-item--name">OUR <br/>WORK</h2>
-		<h3 class="grid-item grid-item--animateIn grid-item--title">BUCHEA</h3>
-		<p class="grid-item grid-item--animateIn grid-item--text">LETS CHAT</p>
+		<h2 data-article="one" class="grid-item grid-item--animateIn grid-item--name">
+			OUR <br/>WORK
+		</h2>
+		<h3 data-article="one" class="grid-item grid-item--animateIn grid-item--title">
+			BUCHEA
+		</h3>
+		<p data-article="one" class="grid-item grid-item--animateIn grid-item--text">
+			LETS CHAT
+		</p>
 	</div>
 
 	<div class="modal">
