Make modal article full height at minimum

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 		<h3 data-article="one" class="grid-item grid-item--animateIn grid-item--title">
 			BUCHEA
 		</h3>
-		<p data-article="one" class="grid-item grid-item--animateIn grid-item--text">
+		<!-- <p data-article="one" class="grid-item grid-item--animateIn grid-item--text">
 			LETS CHAT
-		</p>
+		</p> -->
 	</div>
 
 	<div class="modal">
