--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 	<meta name="author" content="Tyler Buchea" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Kanit:700" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-	<link rel="stylesheet" type="text/css" href="css/animations.css" />
-	<link rel="stylesheet" type="text/css" href="css/index.css" />
-	<link rel="stylesheet" type="text/css" href="css/logo.css" />
+	<link rel="stylesheet" type="text/css" href="styles/index.css" />
 </head>
 <body class="container">
 
