--- a/index.html
+++ b/index.html
@@ -38,34 +38,8 @@
 		<div class="logo-subtext">Mobile first<br/>web experiences.</div>
 	</div>
 
-	<div class="grid">
-		<div data-article="one" class="grid-item grid-item-img grid-item--animateIn"></div>
-		<div data-article="two" class="grid-item grid-item-img grid-item--animateIn"></div>
-		<div data-article="one" class="grid-item grid-item-img grid-item--animateIn"></div>
-		<div data-article="one" class="grid-item grid-item-img grid-item--animateIn"></div>
-		<div data-article="one" class="grid-item grid-item-img grid-item--animateIn"></div>
-		<div data-article="one" class="grid-item grid-item-img grid-item--animateIn"></div>
-		<div data-article="one" class="grid-item grid-item--animateIn grid-item--nav grid-item--nav-prev">
-			<div class="grid__link">CONTACT</div>
-		</div>
-		<div data-article="one" class="grid-item grid-item--animateIn grid-item--nav grid-item--nav-next">
-			<div class="grid__link">ARTICLES</div>
-		</div>
-		<h2 data-article="one" class="grid-item grid-item--animateIn grid-item--name">
-			OUR <br/>WORK
-		</h2>
-		<h3 data-article="one" class="grid-item grid-item--animateIn grid-item--title">
-			BUCHEA
-		</h3>
-		<!-- <p data-article="one" class="grid-item grid-item--animateIn grid-item--text">
-			LETS CHAT
-		</p> -->
-	</div>
-
-	<div class="modal">
-		<div class="modal-exit-button">X</div>
-		<div class="modal-content"></div>
-	</div>
+	<!-- Populated by renderApp() in app.js -->
+	<div id="app"></div>
 
 	<script src="articles.js"></script>
 	<script src="app.js"></script>
