Fix webpack config

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,11 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Entropy - Mobile first web experiences</title>
-	<meta name="description" content="A" />
+	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<meta name="author" content="Tyler Buchea" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Kanit:700" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="styles/index.css" />
 </head>
 <body class="container">
 
@@ -40,9 +39,6 @@
 
 	<!-- Populated by renderApp() in app.js -->
 	<div id="app"></div>
-
-	<script src="articles.js"></script>
-	<script src="build/index.js"></script>
 
 </body>
 </html>
