--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<meta name="author" content="Tyler Buchea" />
+	<meta name="theme-color" content="#39c283" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Kanit:700" rel="stylesheet">
 </head>
